--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
+# Ignore testing results
 *.json
+
+# For ignoring output binary executables
+# Ignore all
+bin/*
+# Unignore all with extensions
+!bin/*.*
